# ConfigTemplate

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: lib.rs
