[package]
name = "config-template"
version = "0.1.0"
edition = "2021"
description = "A flexible way to handle config"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "1.0"
serde-saphyr = "0.0.22"
envious = "0.2.2"
struct-patch = { version = "0.10.4", features = [ "nesting" ]}
